--- a/Meal Planner/Meal Planner.vcxproj
+++ b/Meal Planner/Meal Planner.vcxproj
@@ -119,6 +119,7 @@
     <ClCompile Include="meal_planner.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="dirent.h" />
     <ClInclude Include="meal_planner.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
