--- a/Meal Planner/Meal Planner.vcxproj.filters
+++ b/Meal Planner/Meal Planner.vcxproj.filters
@@ -26,5 +26,8 @@
     <ClInclude Include="meal_planner.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="dirent.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
