--- a/Meal Planner/Meal Planner.vcxproj.filters
+++ b/Meal Planner/Meal Planner.vcxproj.filters
@@ -18,15 +18,21 @@
     <ClCompile Include="main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="meal_planner.cpp">
+    <ClCompile Include="products.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="recipes.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="meal_planner.h">
+    <ClInclude Include="dirent.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="dirent.h">
+    <ClInclude Include="products.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="recipes.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
