--- a/Meal Planner/Meal Planner.vcxproj.filters
+++ b/Meal Planner/Meal Planner.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="recipes.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="structures.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="dirent.h">
@@ -35,5 +38,16 @@
     <ClInclude Include="recipes.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="resource.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="structures.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="Meal Planner.rc">
+      <Filter>Resource Files</Filter>
+    </ResourceCompile>
   </ItemGroup>
 </Project>
